Bug 460418 - Inline error message appears after applying default settings
Summary: Inline error message appears after applying default settings
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_regionandlang (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-14 10:08 UTC by Patrick Silva
Modified: 2022-10-17 13:36 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.1
Sentry Crash Report:


Attachments
screenshot (6.26 KB, image/png)
2022-10-14 10:08 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-10-14 10:08:18 UTC
Created attachment 152802 [details]
screenshot

STEPS TO REPRODUCE
1. have Paper Size, Address, Name Style and Phone Numbers different from the default ones for your language
2. click on 'Defaults' button
3. click on 'Apply' button

OBSERVED RESULT
inline error message saying 'check-language-support failed, output:' appears.
Please see the attached screenshot.

EXPECTED RESULT
no error

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-10-14 19:38:05 UTC
Cannot reproduce on Fedora 36. This error message isn't descriptive enough to tell us what went wrong unfortunately, which is its own bug! It's trying to show the output but either it's failing, or there isn't any.
Comment 3 hanyoung 2022-10-15 10:15:32 UTC
There are two bugs here: One is incorrect locales being saved, introduced by:  https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1922 and https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1971

The other is on the latest ArchLinux system, `locale-gen` can no longer generate random locales.  It's not the same back when we're writing this piece of code: https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1147#note_541814
Comment 4 hanyoung 2022-10-15 10:21:34 UTC
Bug 1 needs to be either fixed or reverted, bug 2 isn't too big an issue as long as bug 1 doesn't trigger. Since it only triggered by abnormal input. Nonetheless, it requires to be fixed in the long term. 

I propose to revert two MRs related to Bug 1 on plasma 5.26. Then we fix both bug 1 and 2 on master, with testing on latest major distros. (Debian, Ubuntu, Arch, Fedora, Alpine and Void with musl)
Comment 5 Bug Janitor Service 2022-10-16 09:19:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2227
Comment 6 hanyoung 2022-10-17 12:49:07 UTC
Git commit 6e5508804fecb5bdf325a465d16ebc3da998e17a by Han Young.
Committed on 17/10/2022 at 12:27.
Pushed by hanyoung into branch 'master'.

fix is default locale check

M  +3    -3    kcms/region_language/kcmregionandlang.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/6e5508804fecb5bdf325a465d16ebc3da998e17a
Comment 7 Nate Graham 2022-10-17 13:36:12 UTC
Git commit d715520c8527bb85898b73b5226b80a0ea082ad2 by Nate Graham, on behalf of Han Young.
Committed on 17/10/2022 at 13:36.
Pushed by ngraham into branch 'Plasma/5.26'.

fix is default locale check


(cherry picked from commit 6e5508804fecb5bdf325a465d16ebc3da998e17a)

M  +3    -3    kcms/region_language/kcmregionandlang.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/d715520c8527bb85898b73b5226b80a0ea082ad2