fix is default locale check

BUG: 460418